tests/base/invalid/Void_CompileFail_2.whiley
import whiley.lang.*:*

void f(int x, void z):
    return
